<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        style="@style/TOOLBAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9E9E9E"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#63007BFF"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_quote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/quote_text"
                    android:textAlignment="center"
                    android:textColor="#BC000000"
                    android:textSize="28sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/im_quote_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/icon_to_favorite_a_quote"
                    android:padding="10dp"
                    android:src="@drawable/ic_heart_outline_24dp"
                    android:tag="unlike"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <ImageView
                    android:id="@+id/im_quote_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_to_share_a_quote"
                    android:padding="10dp"
                    android:src="@drawable/baseline_share_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im_quote_share_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icon_to_share_a_quote"
                    android:padding="10dp"
                    android:src="@drawable/baseline_share_24"
                    app:layout_constraintEnd_toStartOf="@id/im_quote_share"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_to_share_a_quote"
                    android:padding="2dp"
                    android:src="@drawable/baseline_image_24"
                    app:layout_constraintBottom_toBottomOf="@+id/im_quote_share_img"
                    app:layout_constraintEnd_toEndOf="@+id/im_quote_share_img" />

                <ImageView
                    android:id="@+id/im_quote_recolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/icon_to_restyle_the_quote"
                    android:padding="10dp"
                    android:src="@drawable/baseline_color_lens_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/im_quote_restyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/icon_to_recolor_the_quote"
                    android:padding="10dp"
                    android:src="@drawable/baseline_text_format_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/im_quote_recolor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
